--- a/src/components/form/common/commonStyles.css
+++ b/src/components/form/common/commonStyles.css
@@ -9,7 +9,6 @@
 }
 
 .inputText {
-    order: 2;
     min-height: 50px;
     min-width: 205px;
     width: 100%;
